Fixed dist files / added browserify

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "url": "git://github.com/kubicle/nice-emitter.git"
     },
     "scripts": {
-        "build": "uglifyjs index.js -m -c properties=false -o dist/nice-emitter.min.js",
+        "browserify": "rm -rf dist && mkdir dist && browserify index.js -s NiceEmitter -o dist/nice-emitter.js",
+        "minify": "uglifyjs dist/nice-emitter.js -m -c properties=false -o dist/nice-emitter.min.js",
+        "prepublishOnly": "npm run browserify && npm run minify",
         "benchmark": "node ./test/benchmark.js",
         "test": "node ./test/test.js",
         "coverage": "node node_modules/istanbul/lib/cli.js cover ./test/test.js"
@@ -29,8 +31,9 @@
     "author": "kubicle",
     "license": "MIT",
     "devDependencies": {
+        "browserify": "~16.2.0",
         "codeclimate-test-reporter": "^0.5.0",
         "istanbul": "^0.4.5",
-        "uglify-js": "^2.8.18"
+        "uglify-js": "~3.4.0"
     }
 }
