Benchmark & test html page added

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "scripts": {
         "browserify": "rm -rf dist && mkdir dist && browserify index.js -s NiceEmitter -o dist/nice-emitter.js",
         "minify": "uglifyjs dist/nice-emitter.js -m -c properties=false -o dist/nice-emitter.min.js",
-        "prepublishOnly": "npm run browserify && npm run minify",
-        "benchmark": "node ./test/benchmark.js",
-        "test": "node ./test/test.js",
-        "coverage": "node node_modules/istanbul/lib/cli.js cover ./test/test.js"
+        "browserify-test": "browserify test/browser.js -o test/browserified-test.js",
+        "prepublishOnly": "npm run browserify && npm run minify && npm run browserify-test",
+        "benchmark": "node test/benchmark.js",
+        "test": "node test/test.js",
+        "coverage": "node node_modules/istanbul/lib/cli.js cover test/test.js"
     },
     "keywords": [
         "EventEmitter",
