--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "nice-emitter",
     "version": "0.5.0",
-    "description": "Yet another EventEmitter, with features to help you get things right faster.",
+    "description": "Yet another EventEmitter, but with features to help you get things right.",
     "main": "index.js",
+    "types": "index.d.ts",
     "repository": {
         "type": "git",
         "url": "git://github.com/kubicle/nice-emitter.git"
@@ -18,6 +19,7 @@
     },
     "files": [
         "index.js",
+        "index.d.ts",
         "dist"
     ],
     "keywords": [
